# geospatial-indexing

./: .gitignore  CMakeLists.txt  README.md  giredis.cpp
test_data/: nyu.txt
